# Refyne

./: .env  .env.example  .gitignore  .vercelignore  API_README.md  DEPLOYMENT.md  Dockerfile  FINANCE_STRATEGY.md  Makefile  QUICKSTART.md  RAILWAY_SETUP.md  README.md  SETUP.md  SHOW_HN_POST.md  TESTING.md  VERCEL_SETUP.md  customer_data_1000.csv  docker-compose.yml  eslint.config.mjs  generate_customer_data.py  package-lock.json  package.json  pyproject.toml  quick_test.py  railway.json  railway.toml  refyne_high_fidelity_ui_wireframe_react_tailwind.jsx  render.yaml  requirements-api.txt  requirements.txt  sample_customers_10.csv  setup.py  start-local.sh  start.sh  test_api.py  test_api_simple.py  test_api_workflow.sh  test_installation.py  vercel.json
.claude/: settings.local.json
api/: config.py  main.py
api/middleware/: auth.py  rate_limit.py
api/models/: cleaning_rules.py  customer.py  requests.py  responses.py
api/routes/: batch.py  clean.py  customers.py  download.py  health.py  profile.py  upload.py  validate.py
api/services/: batch_service.py  cleaner_service.py  storage_service.py  validator_service.py
api/utils/: file_handler.py
app/: layout.tsx  page.tsx
app/upload/: page.tsx
components/: RefyneWireframe.tsx
lib/: api-client.ts
refyne-ui/: package-lock.json  package.json
refyne.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: audit_logger.py  cleaner.py  customer_profiler.py  finance_validators.py  main.py  profiler.py  semantic.py  validator.py
src/utils/: connectors.py  (+2 more)
static/: pricing.html
tests/: test_profiler.py
(+16 files in other folders)
